<resources>
    <string name="app_name">BSCSIT Sample Project 1</string>
    <string name="Sign_in">Sign In</string>
    <string name="tv_login_header_msg">Please enter your email and password to sign in.</string>
    <string name="your_password">Your Password</string>
    <string name="your_email">Your Email</string>
    <string name="student_name">Name</string>
    <string name="student_rollno">RollNo</string>

    <string name="submit">Submit</string>
    <string name="add">Add</string>
    <string name="title_activity_action_bar">ActionBarActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_favorite">favorite</string>
    <string name="action_settings">setting</string>
    <string name="action_add">Add Student</string>
    
</resources>