<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">


        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="@dimen/_170sdp"
            android:layout_height="@dimen/_65sdp"
            android:visibility="visible"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Sign_in"
            android:textColor="#000000"
            android:textSize="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:textStyle="normal"
                android:text="@string/tv_login_header_msg"
                android:textColor="#393333"
                android:textSize="@dimen/_14sdp" />

            <EditText
                android:id="@+id/et_login_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/xml_textbox_bg"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:hint="@string/your_email"
                android:textColorHint="@color/light_grey"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/xml_textbox_bg"
                android:inputType="textPassword"
                android:padding="@dimen/_10sdp"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:hint="@string/your_password"
                android:textColorHint="@color/light_grey"
                android:textSize="@dimen/_12sdp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/submit"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>