<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelavtiveLayoutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">


        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="@dimen/_170sdp"
            android:layout_height="@dimen/_65sdp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo"
            android:visibility="visible" />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgLogo"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/Sign_in"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_title"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/tv_login_header_msg"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/_12sdp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/tv_login_email"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/xml_textbox_bg"
            android:hint="@string/your_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textColorHint="@color/light_grey"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/et_login_email"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/xml_textbox_bg"
            android:ems="10"
            android:hint="@string/your_password"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textColorHint="@color/light_grey"
            android:textSize="@dimen/_12sdp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/et_login_password"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical">

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/submit" />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>